fix: fix the overflow on header component

--- a/trilha-thomas/src/app/components/header/header.responsive.scss
+++ b/trilha-thomas/src/app/components/header/header.responsive.scss
@@ -1,5 +1,7 @@
 @import "../../scss/variables.scss";
-
+* {
+  overflow-y: hidden;
+}
 @media (max-width: 768px) {
   .navbar {
     display: none;
@@ -9,7 +11,7 @@
   .close-btn {
     display: block;
     background-size: cover;
-    position: absolute;
+    position: fixed;
     right: 0;
     height: 50px;
     width: 50px;
@@ -28,18 +30,25 @@
     z-index: 9;
     position: relative;
 
-    overflow-y: hidden;
-    .menu-list {
-      overflow-y: hidden;
+    height: 100vh;
+    position: fixed;
 
-      height: $section-height-mobile;
+    .menu-list {
+      height: 100%;
+      overflow-y: hidden;
+      // height: $section-height-mobile;
       width: 100vw;
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
+
+      justify-content: center;
       align-items: center;
       font-size: 30px;
       padding: 0;
+
+      li {
+        padding: 20px;
+      }
     }
   }
 }
